[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Pármenas Haniel <parmenashp@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.3.9"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
elevenlabs = "^0.2.27"
termcolor = "^2.4.0"
pyinstaller = "^6.3.0"
websockets = "^12.0"
loguru = "^0.7.2"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
